--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "npm": "6.14.4",
     "node": "12.16.x"
   },
+  
+  "proxy": "http://localhost:4001",
+
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
@@ -66,4 +69,5 @@
   "resolutions": {
     "@babel/preset-env": "7.5.5"
   }
+
 }
